Fix issue with long titles: update spacing rules for grid and cards to allow them fit more or less content as needed

--- a/styles.css
+++ b/styles.css
@@ -60,14 +60,15 @@ body{
     justify-content:center;
     display: grid;
     grid-template-columns: repeat(auto-fit , 200px);
-    grid-auto-rows: 230px;
+    grid-auto-rows: fit-content;
 }
 
 
 .bookCard{
+    margin: 10px;
     text-align: center;
     width:150px;
-    height: 175px;
+    height:fit-content;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 4px 1px grey;
